virt: check for /sys/hypervisor/type for detecting xen PV

https://bugs.freedesktop.org/show_bug.cgi?id=61491